--- a/ANGULAR_PROJECT/src/app/landing/landing.component.html
+++ b/ANGULAR_PROJECT/src/app/landing/landing.component.html
@@ -10,6 +10,7 @@
     <button (click)="lifeCycleHooks()" class="btn-login">lifeCycleHooks</button>
     <button (click)="parent()"  class="btn-login"> Parent </button>
     <button (click)="child()"  class="btn-login">child</button>
+    <button (click)="apicall()">API CAll</button>
     <br>
     <div>{{list}}</div>
     <div *ngIf="studentsData">{{studentsData.name}}
