--- a/ANGULAR_PROJECT/src/app/landing/landing.component.html
+++ b/ANGULAR_PROJECT/src/app/landing/landing.component.html
@@ -12,6 +12,7 @@
     <button (click)="child()"  class="btn-login">child</button>
     <button (click)="apicall()">API CAll</button>
     <button (click)="getApiCall()">Get Api Call</button>
+    <button (click)="form()">form</button>
     <br>
     <div>{{list}}</div>
     <div *ngIf="studentsData">{{studentsData.name}}
