--- a/ANGULAR_PROJECT/src/app/login/login.component.html
+++ b/ANGULAR_PROJECT/src/app/login/login.component.html
@@ -33,7 +33,8 @@
         </span><br>
 
         <label> Confirm Password</label><br>
-        <input  class="inp-pass" type="text" ngModel #confirmPass = 'ngModel' name="confirmPassword">
+        <input  class="inp-pass" type="text" ngModel #confirmPass = 'ngModel'
+        name="confirmPassword">
 
         <br>
         <label > Gender </label><br> 
