--- a/ANGULAR_PROJECT/src/app/landing/landing.component.html
+++ b/ANGULAR_PROJECT/src/app/landing/landing.component.html
@@ -15,6 +15,7 @@
     <button (click)="form()">form</button>
     <button (click)="getById()"> Get Api by ID</button>
     <button (click)="delete()">delet Record</button>
+    <button (click)="updateDetails()">Update Details</button>
     <br>
     <div>{{list}}</div>
     <div *ngIf="studentsData">{{studentsData.name}}
