--- a/ANGULAR_PROJECT/src/app/sign-up/sign-up.component.html
+++ b/ANGULAR_PROJECT/src/app/sign-up/sign-up.component.html
@@ -57,6 +57,11 @@
         <label>Address</label><br>
         <input type="text" formControlName="address"><br>
 
+        <label>Password</label><br>
+        <input type="text" formControlName="password"><br>
+
+        <label>Confirm Password</label><br>
+        <input type="text" formControlName="confirmPassword"><br>
         <br><br>
         <button [disabled]="!signUpForm.valid"  (click)="submit()"> Submit </button>
     </form>
