--- a/ANGULAR_PROJECT/src/app/form/form.component.html
+++ b/ANGULAR_PROJECT/src/app/form/form.component.html
@@ -81,6 +81,25 @@
         <mat-error *ngIf="matForm.get('lastName')?.errors?.['required']">
             Last Name is required
         </mat-error>
+    </mat-form-field><br><br>
+
+    <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input matInput [type]="showPassword ? 'text' : 'password'" formControlName="password" (keyup)="passValidation()"> 
+        <mat-icon matSuffix (click)="visibilePassword()" *ngIf="!showPassword"> visibility </mat-icon>
+        <mat-icon matSuffix (click)="visibilePassword()" *ngIf="showPassword">visibility_off</mat-icon>
+        <mat-hint> Please enter password</mat-hint>
+        <mat-error *ngIf=" matForm.get('password')?.touched && matForm.get('password')?.errors?.['required']"> password is required</mat-error>
+        <mat-error *ngIf="passwordMatch ">pass not matched</mat-error>
+    </mat-form-field>
+
+    <mat-form-field>
+        <mat-label>Confirm Password</mat-label>
+        <input matInput [type]="showConfirmPassword ? 'text' : 'password'" formControlName="confirmPassword" (keyup)="confPassValidation()"> 
+        <mat-icon matSuffix (click)="visibileConfirmPassword()" *ngIf="!showConfirmPassword"> visibility </mat-icon>
+        <mat-icon matSuffix (click)="visibileConfirmPassword()" *ngIf="showConfirmPassword">visibility_off</mat-icon>
+        <mat-hint> Please Enter Confirm password</mat-hint>
+        <mat-error *ngIf="ConfirmPasswordMatch"> password and confirm password should match</mat-error>
     </mat-form-field>
 
 </form>
