--- a/ANGULAR_PROJECT/src/app/sign-up/sign-up.component.html
+++ b/ANGULAR_PROJECT/src/app/sign-up/sign-up.component.html
@@ -64,7 +64,8 @@
         <label>Confirm Password</label><br>
         <input type="text" formControlName="confirmPassword"><br>
         <br><br>
-        <button [disabled]="!signUpForm.valid"  (click)="submit()"> Submit </button>
+        <button *ngIf="this.journey !='update'" [disabled]="!signUpForm.valid"  (click)="submit()"> Submit </button>
+        <button *ngIf="this.journey =='update'" [disabled]="!signUpForm.valid"  (click)="submit()"> Update </button>
     </form>
 </div>
 
