--- a/ANGULAR_PROJECT/src/app/landing/landing.component.html
+++ b/ANGULAR_PROJECT/src/app/landing/landing.component.html
@@ -17,6 +17,7 @@
     <button (click)="delete()">delet Record</button>
     <button (click)="updateDetails()">Update Details</button>
     <button (click)="subject()">subject</button>
+    <button (click)="subject3()">subject3</button>
     <br>
     <div>{{list}}</div>
     <div *ngIf="studentsData">{{studentsData.name}}
