--- a/ANGULAR_PROJECT/src/app/subject1/subject1.component.html
+++ b/ANGULAR_PROJECT/src/app/subject1/subject1.component.html
@@ -1,7 +1,7 @@
 <p>subject1 works!</p>
 <button (click)="sendData()">send Data</button><br>
 --------------------------------------
-<app-subject2></app-subject2>
+<!-- <app-subject2></app-subject2> -->
 
 --------------------------------------
-<app-subject3></app-subject3>
+<!-- <app-subject3></app-subject3> -->
