--- a/ANGULAR_PROJECT/src/app/subject3/subject3.component.html
+++ b/ANGULAR_PROJECT/src/app/subject3/subject3.component.html
@@ -1,3 +1,8 @@
 <p>subject3 works!</p>
 {{dataFromSub1}}
 <br>
+<h2 #headingTag>heading 2.....</h2>
+{{name}}
+<br>
+---------------------------------------------
+<app-subject2></app-subject2>
