--- a/JDFMHotelManegment/src/app/home/home.component.html
+++ b/JDFMHotelManegment/src/app/home/home.component.html
@@ -2,3 +2,4 @@
 <button (click)="journey('admin')">Admin</button>
 <button (click)="journey('owner')">Owner</button>
 <button (click)="journey('user')">User</button>
+<button *ngIf="showLogOut" >Log Out</button>
