--- a/JDFMHotelManegment/src/app/owner/ownerhome/ownerhome.component.html
+++ b/JDFMHotelManegment/src/app/owner/ownerhome/ownerhome.component.html
@@ -1,1 +1,8 @@
-<p>ownerhome works!</p>
+<div>
+    <div>
+        <br>
+        <button mat-raised-button color="primary" (click)="login()">Login</button><br><br>
+        <a routerLink="/owner/ownerSignUp" mat-raised-button color="accent">Don't Have an Account? Please Sign Up Here</a>
+    </div>
+
+</div>
