--- a/JDFMHotelManegment/src/app/owner/ownersignup/ownersignup.component.html
+++ b/JDFMHotelManegment/src/app/owner/ownersignup/ownersignup.component.html
@@ -1,9 +1,9 @@
 <mat-card>
     <mat-card-header>
-        <h2>Owner Registeration</h2>
+        <h2>Owner Sign Up Form</h2>
     </mat-card-header>
     <mat-card-content>
-        <form class="example-form" [formGroup]="registerForm">
+        <form class="example-form" [formGroup]="LoginForm">
             <mat-form-field class="example-full-width">
                 <mat-label>Name</mat-label>
                 <input matInput formControlName="name" >
@@ -13,22 +13,24 @@
                 <input matInput formControlName="email" >
               </mat-form-field>
             <mat-form-field class="example-full-width">
-              <mat-label>Username</mat-label>
-              <input matInput formControlName="id" >
+              <mat-label>Mobile</mat-label>
+              <input matInput formControlName="mobile" >
             </mat-form-field>
               <mat-form-field class="example-full-width">
                 <mat-label>Password</mat-label>
                 <input type="password" matInput formControlName="password" >
               </mat-form-field>
+              <br>
               <mat-radio-group formControlName="gender" aria-label="Select an option">
                 <mat-radio-button value="male">Male</mat-radio-button>
                 <mat-radio-button value="female">Female</mat-radio-button>
                 <mat-radio-button value="other">Other</mat-radio-button>
               </mat-radio-group>
-              <div>
-                <button mat-raised-button color="primary">Submit</button>
-                <a routerLink="/admin/login" mat-raised-button color="accent">Back to Login</a>
-              </div>
+             <div>
+              <button mat-raised-button color="primary" (click)="submit()">Submit</button>
+             </div>
+                
+               
           </form>
     </mat-card-content>
   </mat-card>
