--- a/JDFMHotelManegment/src/app/owner/ownerhome/ownerhome.component.html
+++ b/JDFMHotelManegment/src/app/owner/ownerhome/ownerhome.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <div class="btn-container">
         <button mat-raised-button color="primary"  class="btns" (click)="back()">Back</button>
         <button mat-raised-button color="primary"  class="btns" (click)="login()">Login</button>
@@ -6,4 +6,24 @@
         <button routerLink="" mat-raised-button  class="btns" color="accent"> My Hotels</button>
     </div>
 
-</div>
+</div> -->
+<button mat-raised-button color="primary"  class="btns" (click)="back()">Back</button>
+<form class="example-form" [formGroup]="loginForm" >
+
+    <mat-form-field class="example-full-width">
+        <mat-label>username</mat-label>
+        <input matInput formControlName="userName">
+    </mat-form-field>
+     <br>
+    <mat-form-field class="example-full-width">
+        <mat-label>Password</mat-label>
+        <input matInput type="password"  formControlName="password">
+    </mat-form-field>
+
+    <div>
+        <button mat-raised-button color="primary" (click)="login()">Login</button>
+        <a routerLink="/owner/ownerSignUp" mat-raised-button color="accent">New Owner?</a>
+    </div>
+
+</form>
+
