--- a/JDFMHotelManegment/src/app/owner/ownerhome/ownerhome.component.html
+++ b/JDFMHotelManegment/src/app/owner/ownerhome/ownerhome.component.html
@@ -7,23 +7,40 @@
     </div>
 
 </div> -->
-<button mat-raised-button color="primary"  class="btns" (click)="back()">Back</button>
-<form class="example-form" [formGroup]="loginForm" >
+<button mat-raised-button color="primary" class="btns" (click)="back()">Back</button>
+<form class="example-form" [formGroup]="loginForm" *ngIf="!showForgetPasswordForm">
 
     <mat-form-field class="example-full-width">
         <mat-label>username</mat-label>
         <input matInput formControlName="userName">
     </mat-form-field>
-     <br>
+    <br>
     <mat-form-field class="example-full-width">
         <mat-label>Password</mat-label>
-        <input matInput type="password"  formControlName="password">
+        <input matInput type="password" formControlName="password">
     </mat-form-field>
 
     <div>
         <button mat-raised-button color="primary" (click)="login()">Login</button>
+        <button mat-raised-button color="primary" (click)="forgetPassword()">Forget Passeword</button>
         <a routerLink="/owner/ownerSignUp" mat-raised-button color="accent">New Owner?</a>
     </div>
 
 </form>
 
+<form class="example-form" [formGroup]="forgetPasswordForm" *ngIf="showForgetPasswordForm">
+
+    <mat-form-field class="example-full-width">
+        <mat-label>New Password</mat-label>
+        <input matInput formControlName="newPassword">
+    </mat-form-field>
+    <br>
+    <mat-form-field class="example-full-width">
+        <mat-label>Confirm Password</mat-label>
+        <input matInput type="password" formControlName="confirmPassword">
+    </mat-form-field>
+
+    <div>
+        <button mat-raised-button color="primary" (click)="submit()">Submit</button>
+    </div>
+</form>
