--- a/JDFMHotelManegment/src/app/owner/ownersignup/ownersignup.component.html
+++ b/JDFMHotelManegment/src/app/owner/ownersignup/ownersignup.component.html
@@ -23,7 +23,7 @@
                 Name entered is containing white space
               </mat-error>
               </mat-form-field>
-              <!-- <mat-form-field class="example-full-width">
+              <mat-form-field class="example-full-width">
                 <mat-label>Email</mat-label>
                 <input matInput formControlName="email" >
               </mat-form-field>
@@ -40,7 +40,7 @@
                 <mat-radio-button value="male">Male</mat-radio-button>
                 <mat-radio-button value="female">Female</mat-radio-button>
                 <mat-radio-button value="other">Other</mat-radio-button>
-              </mat-radio-group> -->
+              </mat-radio-group> 
              <div>
               <button mat-raised-button color="primary" (click)="submit()">Submit</button>
              </div>
