--- a/JDFMHotelManegment/src/app/owner/ownerhome/ownerhome.component.html
+++ b/JDFMHotelManegment/src/app/owner/ownerhome/ownerhome.component.html
@@ -22,7 +22,7 @@
 
     <div>
         <button mat-raised-button color="primary" (click)="login()">Login</button>
-        <button mat-raised-button color="primary" *ngIf="forgotPassword" (click)="forgetPassword()">Forget Passeword</button>
+        <button mat-raised-button color="primary" *ngIf="forgotPassword" (click)="forgetPassword()">Forgot Password</button>
         <a routerLink="/owner/ownerSignUp" mat-raised-button color="accent">New Owner?</a>
     </div>
 
