--- a/JDFMHotelManegment/src/app/owner/newhotelregistration/newhotelregistration.component.html
+++ b/JDFMHotelManegment/src/app/owner/newhotelregistration/newhotelregistration.component.html
@@ -1,13 +1,10 @@
-
-
-
 <div class="container">
     <mat-toolbar color="primary">
         <h2 class="h2"><mat-icon> local_hotel</mat-icon> GetSetBooking..</h2>
         <div class="div-home">
-    
+
         </div>
-    
+
     </mat-toolbar><br>
     <br>
     <button mat-raised-button color="primary" (click)="back()">back </button><br>
@@ -27,25 +24,26 @@
                     5 character are required </mat-error>
                 <mat-error *ngIf="hotelRagistrationForm.get('ownerName')?.errors?.['pattern']">pattern is not
                     match</mat-error>
-            </mat-form-field> 
+            </mat-form-field>
             <mat-form-field class="form-field">
                 <mat-label>User Pass</mat-label>
                 <input matInput formControlName="userPass">
                 <mat-hint *ngIf="!hotelRagistrationForm.get('userPass')?.touched">Enter user pass here</mat-hint>
                 <mat-error *ngIf="hotelRagistrationForm.get('userPass')?.errors?.['required']">this field is
                     required</mat-error>
-    
+
             </mat-form-field>
             <mat-form-field class="form-field">
                 <mat-label>Owner Contact</mat-label>
                 <input type="tel" matInput placeholder="555-555-1234" formControlName="ownerContact" maxlength="10">
                 <mat-icon matSuffix>mode_edit</mat-icon>
-                <mat-hint *ngIf="!hotelRagistrationForm.get('ownerContact')?.touched">Enter owner contact here</mat-hint>
+                <mat-hint *ngIf="!hotelRagistrationForm.get('ownerContact')?.touched">Enter owner contact
+                    here</mat-hint>
                 <mat-error *ngIf="hotelRagistrationForm.get('ownerContact')?.errors?.['required']">this field is
                     required</mat-error>
                 <mat-error *ngIf="hotelRagistrationForm.get('ownerContact')?.errors?.['pattern']">accept integers
                     only</mat-error>
-    
+
             </mat-form-field><br>
             <mat-form-field class="form-field1">
                 <mat-label>Hotel Name</mat-label>
@@ -62,7 +60,8 @@
             <mat-form-field class="form-field">
                 <mat-label>Hotel Address</mat-label>
                 <input matInput formControlName="hotelAddress">
-                <mat-hint *ngIf="!hotelRagistrationForm.get('hotelAddress')?.touched">Enter hotel address here</mat-hint>
+                <mat-hint *ngIf="!hotelRagistrationForm.get('hotelAddress')?.touched">Enter hotel address
+                    here</mat-hint>
                 <mat-error *ngIf="hotelRagistrationForm.get('hotelAddress')?.errors?.['required']">this field is
                     required</mat-error>
                 <mat-error
@@ -70,17 +69,18 @@
                     5 character are required </mat-error>
                 <mat-error *ngIf="hotelRagistrationForm.get('hotelAddress')?.errors?.['pattern']">pattern is not
                     match</mat-error>
-            </mat-form-field> 
+            </mat-form-field>
             <mat-form-field class="form-field">
                 <mat-label>Hotel Contact</mat-label>
                 <input type="tel" matInput matInput placeholder="555-555-1234" formControlName="hotelContact">
                 <mat-icon matSuffix>mode_edit</mat-icon>
-                <mat-hint *ngIf="!hotelRagistrationForm.get('hotelContact')?.touched">Enter hotel contact here</mat-hint>
+                <mat-hint *ngIf="!hotelRagistrationForm.get('hotelContact')?.touched">Enter hotel contact
+                    here</mat-hint>
                 <mat-error *ngIf="hotelRagistrationForm.get('hotelContact')?.errors?.['required']">this field is
                     required</mat-error>
                 <mat-error *ngIf="hotelRagistrationForm.get('hotelContact')?.errors?.['pattern']">accept integers
                     only</mat-error>
-    
+
             </mat-form-field><br>
             <mat-form-field class="form-field">
                 <mat-label>Hotel Menu</mat-label>
@@ -93,7 +93,7 @@
                     2 character are required </mat-error>
                 <mat-error *ngIf="hotelRagistrationForm.get('hotelMenu')?.errors?.['pattern']">pattern is not
                     match</mat-error>
-            </mat-form-field> 
+            </mat-form-field>
             <mat-form-field class="form-field">
                 <mat-label>Rooms Available</mat-label>
                 <input matInput formControlName="roomsAvailable">
@@ -101,16 +101,17 @@
                     here</mat-hint>
                 <mat-error *ngIf="hotelRagistrationForm.get('roomsAvailable')?.errors?.['required']">this field is
                     required</mat-error>
-    
             </mat-form-field><br>
-       
-         
-            <button mat-raised-button color="primary" (click)="submitDetails()">Submit Details </button> 
-          
-    
-    
+
+            <br><br>
+            <label>Add Hotel Images</label> &nbsp;
+            <input type="file" formControlName="hotelImages" multiple accept="image/*" (change)="onFileSelected($event)">
+            <br><br>
+
+            <button mat-raised-button color="primary" (click)="submitDetails()">Submit Details </button>
+
         </form>
     </div>
-    
-    
-    </div>
+
+
+</div>
