--- a/JDFMHotelManegment/src/app/owner/ownersignup/ownersignup.component.html
+++ b/JDFMHotelManegment/src/app/owner/ownersignup/ownersignup.component.html
@@ -41,6 +41,33 @@
                 <mat-radio-button value="female">Female</mat-radio-button>
                 <mat-radio-button value="other">Other</mat-radio-button>
               </mat-radio-group> 
+
+              <mat-form-field>
+                <mat-label>compnies</mat-label>
+                <mat-select formControlName="compnies" multiple>
+                  <mat-option *ngFor="let compny of compnies" [value]="compny">{{compny}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+<!-- 
+              <mat-form-field appearance="outline">
+                <mat-label>Select a file</mat-label>
+                <input  type="file"  matInput formControlName="file" (change)="onFileSelected($event)">
+              </mat-form-field> -->
+
+              <!-- <div class="file-upload-container">
+                <input type="file" (change)="onFileSelected($event)" hidden>
+                <mat-form-field>
+                  <input matInput [value]="" readonly>
+                </mat-form-field>
+                <button mat-icon-button >
+                  <mat-icon>attach_file</mat-icon>
+                </button>
+              </div> -->
+          <!-- <br><br>
+                <input type="file"   formControlName="file"  (change)="onFileSelected($event)">
+          
+<br><br> -->
+
              <div>
               <button mat-raised-button color="primary" (click)="submit()">Submit</button>
              </div>
